Problem 1 - Load moderndive

--- a/p8105_hw1_eb3516.Rmd
+++ b/p8105_hw1_eb3516.Rmd
@@ -4,3 +4,12 @@ author: "Liz Bekerman"
 date: 2023-09-23
 output: github_document
 ---
+
+Setup code to include loading the moderndive library.
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(moderndive)
+```
+
